# mtlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  adaptive_sampling.go  benchmark_alloc_test.go  benchmark_comparison_test.go  benchmark_test.go  benchmark_typical_test.go  convenience.go  dynamic_level_test.go  format_integration_test.go  fortype.go  fortype_bench_test.go  fortype_test.go  fortype_util_test.go  go.mod  go.sum  json_format_test.go  levelswitch.go  levelswitch_test.go  logcontext.go  logcontext_bench_test.go  logcontext_test.go  logger.go  logger_dots_test.go  logger_generic.go  logger_selflog_test.go  logger_test.go  logr.go  numeric_indexing_test.go  options.go  pipeline.go  pipeline_test.go  pool.go  sampling_advanced_test.go  sampling_bench_test.go  sampling_config.go  (+14 more)
.github/: otel-collector-config.yaml  pull_request_template.md
benchmarks/: README.md  benchmark_comparison_test.go  benchmark_typical_test.go  go.mod  go.sum
configuration/: builder.go  config.go  config_selflog_test.go  config_test.go  convenience.go
core/: capturer.go  deadline_stats.go  destructurer.go  enricher.go  event.go  event_test.go  filter.go  level.go  logger.go  logvalue.go  property.go  property_value.go  sampling_policy.go  sink.go
dashboards/: grafana-mtlog-dashboard.json
destructure/: destructurer.go
docker/: docker-compose.test.yml
docs/: Design.md  PERFORMANCE.md  benchmarks.md  (+15 more)
zed-extension/mtlog/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extension.toml  rust-toolchain.toml
zed-extension/mtlog/src/: lib.rs
(+516 files in other folders)
